--- a/pad/manifests/android/build.gradle
+++ b/pad/manifests/android/build.gradle
@@ -4,4 +4,5 @@ repositories {
 
 dependencies {
     implementation 'com.google.android.play:asset-delivery:2.3.0'
+    implementation 'androidx.activity:activity:1.11.0'
 }
